små kommentarer og tilføje tags i mockdata