@@ -4,9 +4,9 @@ import com.example.p3.entities.Jurisdiction;
 import com.example.p3.entities.Stage;
 import com.example.p3.entities.Tool;
 import lombok.Getter;
-
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Getter
 public class PersonalToolDto implements  ToolDto {
@@ -14,8 +14,8 @@ public class PersonalToolDto implements  ToolDto {
     private Boolean is_personal = true;
     private String name;
     private String url;
-    private ArrayList<String> jurisdictions;
-    private ArrayList<String> stage;
+    private List<String> jurisdictions;
+    private List<String> stage;
     private  Boolean pending;
 
     @Override
@@ -25,20 +25,12 @@ public class PersonalToolDto implements  ToolDto {
         this.url = t.getUrl();
         this.pending = t.getPending();
 
-        this.jurisdictions = new ArrayList<>();
-        String jurisdictionName;
-        List<Jurisdiction> jurisdictionList = t.getJurisdictions().stream().toList();
-        for (int i = 0; i < jurisdictionList.size(); i++) {
-            jurisdictionName = jurisdictionList.get(i).getName();
-            this.jurisdictions.add(jurisdictionName);
-        }
+        this.jurisdictions = t.getJurisdictions().stream()
+                .map(Jurisdiction::getName)
+                .collect(Collectors.toList());
 
-        this.stage = new ArrayList<>();
-        String stageName;
-        List<Stage> stageList = t.getStages().stream().toList();
-        for (int i = 0; i < stageList.size(); i++) {
-            stageName = stageList.get(i).getName();
-            this.stage.add(stageName);
-        }
+        this.stage = t.getStages().stream()
+                .map(Stage::getName)
+                .collect(Collectors.toList());
     }
 }
